joobyRun: optimize hot-reload latency with debouncer and smart compiler detection
- fix #3943